secretmappings-policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: check-secret-store-access-for-secretmappings
spec:
  failurePolicy: Fail
  paramKind:
    apiVersion: v1
    kind: ConfigMap
  matchConstraints:
    resourceRules:
    - apiGroups:
        - "humanitec.io"
      apiVersions:
        - "v1alpha1"
      operations:
        - "CREATE"
        - "UPDATE"
      resources:
        - "secretmappings"
  validations:
    - expression: "params != null"
      message: "params missing but required to bind to this policy"
    - expression: "has(params.data.allowedSecretStoreNames)"
      message: "params.data.allowedSecretStoreNames missing but required to bind to this policy"
    - expression: object.spec.secretData.all(data, params.data.allowedSecretStoreNames.contains(data.secretStoreName))
      messageExpression: "'secretStoreName is not allowed in this list: ' + string(params.data.allowedSecretStoreNames)"
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-secret-store-access-for-secretmappings
spec:
  paramRef:
    name: check-secret-store-access-for-secretmappings
    parameterNotFoundAction: Deny
  policyName: check-secret-store-access-for-secretmappings
  validationActions:
    - Deny
